# gsPetsc

./: CMakeLists.txt  FindPETSc.cmake  README.md
examples/: helloPETSc.cpp  helloSubmodule.cpp  parallel_example.cpp  petsc_nest_example.cpp  serial_example.cpp  test_petsc_nonlinear_elasticity_3D.cpp
src/: PETScSupport.h  gsClass.h  gsHeader2.h  gsPetscLinearSolver.h
